2010-04-23  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* upgrade to zlib 1.2.5

2010-04-14  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Regenerate all configure scripts with latest TEA tcl.m4

2010-04-09  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Only build pkgIndex.tcl when something changed.

2010-04-07  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* TkimgInitUtilities() always succeeds, and does not
	  return TCL_ERROR/TCL_OK.
	* Eliminate forced dependancy for aqua on
	  ::tk::unsupported::MacWindowStyle
	* Eliminate msgcat compatibility layer

2010-04-01  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* [Bug 2975449] Kill the Tk 8.2/8.3 ifdeffery - at
	  least the runtime swizzle (I don't consider
	  this a bug at all, because it worked fine
	  as long as it was needed!)
	* [Bug 2907616] configure ignores --mandir switch

2010-03-31  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Sync with latest TEA (tcl.m4), regenerated all
	  configure scripts with autoconf-2.65.
	* Sync genStubs.tcl with latest one from Tcl 8.6,
	  regenerated all *Decls.h files. All stubs
	  pointers are const now.
    
2009-07-26  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Sync with latest TEA (tcl.m4), regenerated all
	  configure scripts.
    
2009-04-28  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Fix [Bug #82910] teacup requires libX11 to run
    
2009-03-12  Stuart Cassoff <stwo@users.sourceforge.net>

	* various fixes to tcl.m4 [Bug #2669308] (Stuart Cassoff)
	  (To be checked in in sampleextension as well.)
	* fix [Bug #2669482] Can't 'make test'

2009-03-12  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* fix "make checkstubs"
	* a few CONST84 eliminations

2009-03-09  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* Revert to using "ld -b" in stead of "${CC} -b" for
	  HP-UX-11; it doesn't work in 64-bit mode.

2009-03-03  Jan Nijtmans <nijtmans@users.sourceforge.net>

	* fix "make genstubs" for libpng, libtiff, libz, libjpeg