@@ -5,15 +5,12 @@
 #include "tkimg.h"
 
 /*
- * Remove macros that will interfere with the definitions below.
- */
-
-
-/*
  * WARNING: The contents of this file is automatically generated by the
  * genStubs.tcl script. Any modifications to the function declarations
  * below should be made in the tkimg.decls script.
  */
+
+MODULE_SCOPE const TkimgStubs tkimgStubs;
 
 /* !BEGIN!: Do not edit below this line. */
 
